<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_frame_two"
    android:orientation="vertical"
    tools:context="com.app.musicmelamusicplayer.MainActivity">


    <LinearLayout
        android:id="@+id/TitleSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginTop="50dp"
            ads:srcCompat="@drawable/wave">


        </ImageView>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/background"
            android:textSize="28sp">

        </TextView>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/adSection"
        android:layout_below="@id/TitleSection">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="2">


                <soup.neumorphism.NeumorphCardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_row="0"
                    android:layout_column="0">

                    <LinearLayout
                        android:id="@+id/bangla_songs"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            ads:srcCompat="@drawable/music_icon">

                        </ImageView>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/roboto_bold"
                            android:text="Bangla"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp">

                        </TextView>

                    </LinearLayout>


                </soup.neumorphism.NeumorphCardView>

                <soup.neumorphism.NeumorphCardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:id="@+id/hindi_songs"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            ads:srcCompat="@drawable/music_icon">

                        </ImageView>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/roboto_bold"
                            android:text="Hindi"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp">

                        </TextView>

                    </LinearLayout>


                </soup.neumorphism.NeumorphCardView>

                <soup.neumorphism.NeumorphCardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:id="@+id/english_songs"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            ads:srcCompat="@drawable/music_icon">

                        </ImageView>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/roboto_bold"
                            android:text="English"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp">

                        </TextView>

                    </LinearLayout>


                </soup.neumorphism.NeumorphCardView>

                <soup.neumorphism.NeumorphCardView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:id="@+id/arabic_songs"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            ads:srcCompat="@drawable/music_icon">

                        </ImageView>


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:fontFamily="@font/roboto_bold"
                            android:text="Arabic"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="20sp">

                        </TextView>

                    </LinearLayout>


                </soup.neumorphism.NeumorphCardView>


            </GridLayout>

            <soup.neumorphism.NeumorphCardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:id="@+id/rate_us_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="62dp"
                        android:layout_height="62dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        ads:srcCompat="@drawable/thank_you"
                        tools:ignore="ContentDescription">


                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/Rate_us_text"
                        android:textColor="@color/black"
                        android:textSize="16sp">


                    </TextView>

                </LinearLayout>

            </soup.neumorphism.NeumorphCardView>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/adSection"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/background">

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/bannerAdId">

        </com.google.android.gms.ads.AdView>


    </RelativeLayout>


</RelativeLayout>